--- a/build.xml
+++ b/build.xml
@@ -296,6 +296,15 @@ lombok.launch.AnnotationProcessorHider$ClaimingProcessor</echo>
 		<copy file="dist/lombok-${lombok.version}.jar" tofile="dist/lombok.jar" />
 		<property name="lombok.dist.built" value="true" />
 	</target>
+
+	<target name="dist + delombok" depends="dist">
+		<java jar="dist/lombok-${lombok.version}.jar" fork="true" failonerror="true">
+			<arg value="delombok" />
+			<arg value="test-input" />
+			<arg value="-d" />
+			<arg value="test-output" />
+		</java>
+	</target>
 	
 	<target name="dist-utils" description="Builds lombok-utils.jar, which is a library used by i.e. lombok.ast project." depends="version, compile">
 		<mkdir dir="dist" />
